@@ -66,6 +66,8 @@ Internal:
 - OpenKore will exit if a configuration file failed to load.
 - checkMonsterCondition() now takes a monster hash instead of monster ID.
   (Perhaps other similar functions should be converted too)
+- inInventory($item, $quantity = 1) returns 1 iff you have >= $quantity of
+  $item in your inventory.
 
 Credits:
 - asuwannarat, as2765324: tRO server details.
